--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=68.2.2", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "trfc"
+name = "trnr"
 version = "0.0.0"
 description = ""
 authors = [{name = "Nick Eisenberg"}]
